--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,11 +25,11 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
-#  jpa:
-#    properties:
-#      hibernate:
-#        show_sql: true
-#        format_sql: true
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 
 logging:
   level:
@@ -47,3 +47,4 @@ jwt:
     authentication:
       path: auth
       refresh: refresh
+      register: auth/register
