--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.yazuo.architecture</groupId>-->
+            <!--<artifactId>commons-starter</artifactId>-->
+            <!--<version>1.1.2-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
