--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <version>3.8.1</version>
         </dependency>
 
+        <!--配置redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
 
     </dependencies>
 
